printscript-validator/src/test/resources/1.1/invalid-type-unary-operation/golden.ps
1:21-1:25 -> Error (Type Mismatch): Cannot apply operator '+' to operand of type boolean